--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
   <!-- theme stylesheet-->
   <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
-  <!-- ekko lightbox-->
-  <link rel="stylesheet" href="css/ekko-lightbox.css">
+
   <!-- Custom stylesheet - for your changes-->
   <link rel="stylesheet" href="css/custom.css">
 
@@ -25,9 +24,9 @@
 
 </head>
 
-<body data-spy="scroll" data-target="#navigation" data-offset="120">
+<body data-spy="scroll" data-target="#navigation" data-offset="100">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/uttowerbw.jpg')" ; class="intro">
+  <section id="intro" style="background-image: url('img/uttowerbw.jpg');" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -43,30 +42,32 @@
   </section>
   <!-- intro end-->
   <!-- <navbar> -->
-  <!-- <header class="header">
-      <div class="sticky-wrapper">
-        <div role="navigation" class="navbar navbar-default">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"></a>
-            </div>
-            <div id="navigation" class="collapse navbar-collapse navbar-right">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#intro">Home</a></li>
-                <li><a href="#about">About </a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#text">Text</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </div>
+  <header class="header">
+    <div class="sticky-wrapper">
+      <div role="navigation" class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            <a href="#intro" class="navbar-brand scroll-to">
+
+          </div>
+          <div id="navigation" class="collapse navbar-collapse navbar-right">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#intro">Home</a></li>
+              <li><a href="#about">About </a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+
+              <li><a href="#contact">Contact</a></li>
+            </ul>
           </div>
         </div>
       </div>
-    </header> -->
+    </div>
+  </header>
   <!-- </.navbar> -->
   <!-- about-->
-  <section id="about" class="text">
+  <section id="about" class="text" style="background-color: #d3e8e1">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -81,8 +82,11 @@
             on the future. I am excited to learn more and practice Agile Development as the communication aspect of this practice leads right into my wheelhouse.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
+          <br>
 
+          <h4><a href="documents/jflahertyVitaetech.pdf" target="blank" </i>Download My Resume</a></h4>
         </div>
+
         <div class="col-md-5 col-md-offset-1">
           <p><img src="img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
         </div>
@@ -92,7 +96,7 @@
   <!-- about end-->
 
   <!-- Services-->
-  <section id="services" style="background-color: black" color: "white">
+  <section id="services" style="background-color: #f9f7e8">
     <div class="container">
       <div class="row services">
         <div class="col-md-12">
@@ -127,7 +131,7 @@
   <!-- Services end-->
 
   <!-- Portfolio / gallery-->
-  <section id="portfolio" class="gallery">
+  <section id="portfolio" class="gallery" style="background-color: #d3e8e1">
     <div class="container clearfix">
       <div class="row">
         <div class="col-md-12">
@@ -138,23 +142,22 @@
       <div class="row">
 
         <div class="col-sm-4">
+          <div class="box"><a href="https://uthdo2017.herokuapp.com/" title="" data-gallery="portfolio" data-title="M.A. Capstone Project" data-footer="M.A. Capstone Project"><img src="img/capstone.jpg" alt="" class="img-responsive"></a></div>
+        </div>
+        <div class="col-sm-4">
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
+        </div>
+        <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/Collect-Crystals/" title="" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Game in JavaScript"><img src="img/crystals.png" alt="" class="img-responsive"></a></div>
         </div>
+
+      </div>
+      <div class="row">
+
 
         <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/traintime.png" alt="" class="img-responsive"></a></div>
         </div>
-
-        <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
-        </div>
-      </div>
-      <div class="row">
-
-        <div class="col-sm-4">
-          <div class="box"><a href="https://uthdo2017.herokuapp.com/" title="" data-gallery="portfolio" data-title="M.A. Capstone Project" data-footer="M.A. Capstone Project"><img src="img/capstone.jpg" alt="" class="img-responsive"></a></div>
-        </div>
-
         <div class="col-sm-4">
           <div class="box"><a href="https://warm-beach-51608.herokuapp.com/" title="" data-gallery="portfolio" data-title="Front end and Back End" data-footer=""><img src="img/burger app.png" alt="" class="img-responsive"></a></div>
         </div>
@@ -170,7 +173,7 @@
   <!-- Portfolio / gallery end-->
 
   <!-- contact-->
-  <section id="contact" style="background-color: #648396;" class="text-page section-inverse">
+  <section id="contact" style="background-color: #f9f7e8">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -208,10 +211,13 @@
   <!-- Javascript files-->
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
   <script>
-  window.jQuery ||
-  document.write('<script src="js/jquery-1.11.0.min.js"></script>');
-</script>
+    window.jQuery ||
+      document.write('<script src="js/jquery-1.11.0.min.js">
+  </script>');
+  </script>
+
   <!-- Bootstrap CDN-->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
